--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hogan-express": "0.5.2",
     "mongoose": "4.1.9",
     "natural": "^0.5.0",
+    "nodemailer": "^4.0.1",
     "passport": "0.2.0",
     "passport-facebook": "1.0.3",
     "pos": "^0.4.2",
